# Wcraft

./: CMakeLists.txt  README  README.md
src/: camera.c  camera.h  main.c  noise.c  noise.h  player.c  player.h  rendering.c  rendering.h  thread_pool.c  thread_pool.h  util.c  util.h  window.c  window.h  world.c  world.h  xorshift.c  xorshift.h
